# ai-toolkit

./: .gitignore  .prettierignore  .prettierrc.yml  Agens.MD  AgentsLog.json  ComfyUI_Remote_Access_Tutorial.md  FAQ.md  LOCAL_VM_SETUP.md  Notebook.code-workspace  README.md  WSL-INSTALLATION-README.md  docker-compose.yml  flux_train_ui.py  info.py  install-wsl-ubuntu.bat  install-wsl-ubuntu.ps1  pyproject.toml  requirements-ml.txt  requirements.txt  run.py  run_modal.py  setup_local_vm.ps1  setup_local_vm.sh
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  code-review.yml  security.yml
config/examples/: extract.example.yml  generate.example.yaml  mod_lora_scale.yaml  train_flex_redux.yaml  train_full_fine_tune_flex.yaml  train_full_fine_tune_lumina.yaml  train_lora_chroma_24gb.yaml  train_lora_flex2_24gb.yaml  train_lora_flex_24gb.yaml  train_lora_flux_24gb.yaml  train_lora_flux_kontext_24gb.yaml  train_lora_flux_schnell_24gb.yaml  train_lora_hidream_48.yaml  train_lora_lumina.yaml  train_lora_qwen_image_24gb.yaml  train_lora_qwen_image_edit_2509_32gb.yaml  train_lora_qwen_image_edit_32gb.yaml  train_lora_sd35_large_24gb.yaml  train_lora_wan21_14b_24gb.yaml  train_lora_wan21_1b_24gb.yaml  train_lora_wan22_14b_24gb.yaml  train_slider.example.yml
config/examples/modal/: modal_train_lora_flux_24gb.yaml  modal_train_lora_flux_schnell_24gb.yaml
extensions/example/: ExampleMergeModels.py  __init__.py
extensions/example/config/: config.example.yaml
extensions_built_in/advanced_generator/: Img2ImgGenerator.py  PureLoraGenerator.py  ReferenceGenerator.py  __init__.py
extensions_built_in/advanced_generator/config/: train.example.yaml
extensions_built_in/concept_replacer/: ConceptReplacer.py  __init__.py
extensions_built_in/concept_slider/: ConceptSliderTrainer.py
extensions_built_in/dataset_tools/: DatasetTools.py  SuperTagger.py  SyncFromCollection.py  __init__.py
extensions_built_in/dataset_tools/tools/: caption.py  dataset_tools_config_modules.py  fuyu_utils.py  image_tools.py  llava_utils.py  sync_tools.py
extensions_built_in/diffusion_models/: __init__.py
extensions_built_in/diffusion_models/chroma/: __init__.py  chroma_model.py  chroma_radiance_model.py  pipeline.py
extensions_built_in/diffusion_models/f_light/: __init__.py  (+1 more)
extensions_built_in/flex2/: flex2.py  pipeline.py
extensions_built_in/image_reference_slider_trainer/: ImageReferenceSliderTrainerProcess.py  __init__.py
extensions_built_in/sd_trainer/: DiffusionTrainer.py  SDTrainer.py  UITrainer.py
extensions_built_in/ultimate_slider_trainer/: UltimateSliderTrainerProcess.py  __init__.py
jobs/: BaseJob.py  ExtensionJob.py  ExtractJob.py  GenerateJob.py  MergeJob.py  ModJob.py  TrainJob.py  __init__.py
jobs/process/: BaseExtensionProcess.py  BaseExtractProcess.py  BaseMergeProcess.py  BaseProcess.py  BaseSDTrainProcess.py  BaseTrainProcess.py  ExtractLoconProcess.py  ExtractLoraProcess.py  GenerateProcess.py  MergeLoconProcess.py  ModRescaleLoraProcess.py  TrainESRGANProcess.py  TrainFineTuneProcess.py  TrainSDRescaleProcess.py  TrainSliderProcess.py  TrainSliderProcessOld.py  TrainVAEProcess.py  __init__.py
notebooks/: FLUX_1_dev_LoRA_Training.ipynb  FLUX_1_schnell_LoRA_Training.ipynb  SliderTraining.ipynb
scripts/: calculate_timestep_weighing_flex.py  convert_cog.py  convert_diffusers_to_comfy.py  convert_diffusers_to_comfy_transformer_only.py  convert_lora_to_peft_format.py  extract_lora_from_flex.py  generate_sampler_step_scales.py  make_diffusers_model.py  make_lcm_sdxl_model.py  patch_te_adapter.py  repair_dataset_folder.py  update_sponsors.py
testing/: compare_keys.py  generate_lora_mapping.py  generate_weight_mappings.py  merge_in_text_encoder_adapter.py  shrink_pixart.py  shrink_pixart2.py  shrink_pixart_sm.py  shrink_pixart_sm2.py  shrink_pixart_sm3.py  test_bucket_dataloader.py  test_model_load_save.py  test_vae.py  test_vae_cycle.py
toolkit/: accelerator.py  assistant_lora.py  basic.py  buckets.py  civitai.py  clip_vision_adapter.py  config.py  config_modules.py  control_generator.py  cuda_malloc.py  custom_adapter.py  data_loader.py  dataloader_mixins.py  dequantize.py  ema.py  embedding.py  esrgan_utils.py  extension.py  guidance.py  image_utils.py  inversion_utils.py  ip_adapter.py  job.py  kohya_lora.py  kohya_model_util.py  layers.py  llvae.py  logging_aitk.py  lora_special.py  lorm.py  losses.py  lycoris_special.py  lycoris_utils.py  metadata.py  network_mixins.py  optimizer.py  paths.py  photomaker.py  photomaker_pipeline.py  pipelines.py  (+15 more)
toolkit/data_transfer_object/: data_loader.py
toolkit/keymaps/: stable_diffusion_refiner.json  stable_diffusion_refiner_unmatched.json  stable_diffusion_sd1.json  stable_diffusion_sd2.json  stable_diffusion_sd2_unmatched.json  stable_diffusion_sdxl.json  stable_diffusion_sdxl_unmatched.json  stable_diffusion_ssd.json  stable_diffusion_ssd_unmatched.json  stable_diffusion_vega.json
toolkit/memory_management/: manager.py  manager_modules.py
toolkit/models/: DoRA.py  FakeVAE.py  LoRAFormer.py  RRDB.py  auraflow.py  autoencoder_tiny_with_pooled_exits.py  base_model.py  block.py  clip_fusion.py  clip_pre_processor.py  cogview4.py  control_lora_adapter.py  decorator.py  diffusion_feature_extraction.py  flux.py  flux_sage_attn.py  i2v_adapter.py  ilora.py  llm_adapter.py  lokr.py  mean_flow_adapter.py  pixtral_vision.py  redux.py  single_value_adapter.py  size_agnostic_feature_encoder.py  sref.py  subpixel_adapter.py  te_adapter.py  te_aug_adapter.py  vd_adapter.py  zipper_resampler.py
toolkit/optimizers/: adafactor.py  adam8bit.py  automagic.py  optimizer_utils.py  prodigy_8bit.py
toolkit/samplers/: custom_flowmatch_sampler.py  custom_lcm_scheduler.py  mean_flow_scheduler.py
toolkit/timestep_weighing/: default_weighing_scheme.py
toolkit/util/: blended_blur_noise.py  get_model.py  inverse_cfg.py  ip_adapter_utils.py  losses.py  mask.py  quantize.py  shuffle.py  vae.py
ui/: package-lock.json  package.json
(+66 files in other folders)
